<resources>
    <string name="app_name">techcheck</string>
    <string name="password">Password</string>
    <string name="passwords">password</string>
    <string name="email_address">Email address</string>
    <string name="techcheck_ikhokha_com">techcheck@ikhokha.com</string>
    <string name="authenticate">Proceed</string>
    <string name="title_activity_shopping_menu">ShoppingMenu</string>
    <string name="title_home">Shop</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">Quantity</string>
    <string name="title_activity_scanner">Scanner</string>
    <string name="checkout">CheckOut</string>
    <string name="cart_details">Cart details</string>
    <string name="total">Total</string>
    <string name="checkouts">CheckOut</string>
    <string name="cart_is_empty">Cart is empty.</string>
    <string name="click_scan_button_to_scan_a_product_nproducts_will_be_automatically_added_to_cart">Products will be automatically added to cart when scanned.</string>
    <string name="scan">Scan</string>
    <string name="lines">------</string>
    <string name="reading">Reading</string>
    <string name="email_error">Please provide email address.</string>
    <string name="user_error">User is not registered.</string>
    <string name="error">Failed to connect, Please check connection.</string>
</resources>
