<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.Shop">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_scan_button_to_scan_a_product_nproducts_will_be_automatically_added_to_cart"
        android:textColor="@color/white"
        android:typeface="monospace"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="10sp"/>

    <me.dm7.barcodescanner.zxing.ZXingScannerView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/scanners"
        android:layout_margin="45dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/scanner"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardElevation="15dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cardCornerRadius="35dp"
        app:cardBackgroundColor="@color/yellow"
        android:typeface="monospace"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp">

        <TextView
            android:id="@+id/scann"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:typeface="monospace"
            android:textStyle="bold"
            android:text="@string/scan"
            android:textSize="10sp"
            android:textColor="@color/black"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:visibility="gone"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_code_text"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="65dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/yellow"
        android:typeface="monospace"
        android:textStyle="bold"
        android:text="@string/lines"
        />
    <TextView
        android:id="@+id/value"
        android:visibility="gone"
        android:textSize="19sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"/>
</FrameLayout>