<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.Authentication"
    android:background="@color/white">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/email_address"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="2dp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@+id/email"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColorHint="@color/black"
            android:hint="@string/password"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:typeface="monospace"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/sign"
        android:layout_below="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="Authenticate"
        app:cardBackgroundColor="@color/yellow"
        app:cardElevation="3dp"
        app:cardCornerRadius="3dp"
        android:layout_marginLeft="117dp"
        android:layout_marginStart="117dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/proceed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/authenticate"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center" />
        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/black" />
    </android.support.v7.widget.CardView>
</RelativeLayout>