<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.Cart">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/items"
            android:layout_above="@id/checker"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"/>
        <android.support.v7.widget.CardView
            android:id="@+id/checkout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:gravity="center"
            app:cardBackgroundColor="@color/blue"
            app:cardElevation="3dp"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="100dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/checkout"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/yellow"
                android:layout_gravity="center"
                android:gravity="center" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/checker"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:cardCornerRadius="3dp"
            app:cardMaxElevation="20dp"
            android:layout_marginBottom="75dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardElevation="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="13dp"
                android:text="@string/cart_details"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="monospace" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="39dp"
                android:layout_marginEnd="90dp"
                android:layout_marginRight="90dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/products_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:textColor="@color/black"
                android:textSize="10dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="80dp"
                android:text="@string/total"
                android:typeface="monospace"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="45dp"
                android:typeface="monospace"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
            <android.support.v7.widget.CardView
                android:id="@+id/checkout_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:cardCornerRadius="15dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/black">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_arrow_forward_black_24dp"/>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkouts"
                android:layout_marginTop="30dp"
                android:textSize="10sp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end|center_vertical"
                android:textColor="@color/black"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/update"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:cardCornerRadius="3dp"
            app:cardMaxElevation="20dp"
            android:layout_marginBottom="75dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardElevation="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:typeface="monospace"
                android:text="@string/cart_is_empty"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/ic_add_shopping_cart_black_24dp"
                android:layout_width="35dp"
                android:layout_height="35dp" />
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</FrameLayout>